# hyprlib

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  core.c  core.h
.github/workflows/: ci.yml
src/algorithm/: algo.h  sort.c  sort.h
src/alias/: alias.h  hypralias.h
src/math/: math.c  math.h
src/platform/: compiler.h  cpu.h  cstdver.h  hyprplatform.h  os.h  platform.h  types.h
test/: test.c
